// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders the UI snapshot correctly 1`] = `
<svg
  aria-hidden={true}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgDownload"
  focusable={false}
  id="basic"
  role="img"
  title="download icon"
/>
`;

exports[`Icon renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <svg
    aria-hidden={true}
    className="css-0"
    id="customIcon"
    role="img"
    title="undefined icon"
    viewBox="0 0 24 14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M10.526 12.871L.263 1.676 1.737.324 12 11.52 22.263.324l1.474 1.352L13.474 12.87a2 2 0 01-2.948 0z"
      fillRule="evenodd"
    />
  </svg>
</div>
`;

exports[`Icon renders the UI snapshot correctly 3`] = `
<svg
  aria-hidden={true}
  className="chakra-icon css-1i69hru"
  data-file-name="SvgDownload"
  focusable={false}
  id="chakra"
  role="img"
  title="download icon"
/>
`;

exports[`Icon renders the UI snapshot correctly 4`] = `
<svg
  aria-hidden={true}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgDownload"
  data-testid="props"
  focusable={false}
  id="props"
  role="img"
  title="download icon"
/>
`;
